tests/neg-custom-args/captures/lazylists1.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylists1.scala:25:66 -----------------------------------
25 |      def concat(other: LazyList[A]^{f}): LazyList[A]^{this, f} = ??? : (LazyList[A]^{xs, f}) // error
   |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                        Found:    LazyList[A]^{xs, f}
   |                                        Required: LazyList[A]^{Mapped.this, f}
   |
   |                                        Note that capability `xs` cannot flow into capture set {Mapped.this, f}.
   |
   | longer explanation available when compiling with `-explain`
